Added more content to README.md

--- a/notebook/pipeline.ipynb
+++ b/notebook/pipeline.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# iniciar elasticsearch instance\n",
-    "!docker-compose up"
+    "!docker-compose up -d"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# HTML de referencia\n",
-    "html = \"<b>Misión TIC 2022</b>\" + \\\n",
+    "html = \"<b>Titulo de documento</b>\" + \\\n",
     "\"<br /><br /><br />\" + \\\n",
     "\"Rutas\" + \\\n",
     "\"<ul>\" + \\\n",
@@ -157,12 +157,12 @@
     "\"<p>Si eres mayor de 15        años, quieres aprender a programar y tienes la disponibilidad de 30 horas semanales para realizar la formación. Deberás registrate en la web, seleccionar la ruta 2 y diligenciar el formulario de inscripción.</p>\" + \\\n",
     "\"Universidades:\" + \\\n",
     "\"<br />\" + \\\n",
-    "\"* UniNorte<br />· UTP<br />- Universidad Nacional<br />La universidad nacional ...<br />- UNAB\" + \\\n",
+    "\"* UniNorte<br />· UniSimon<br />- Universidad Nacional<br />La universidad nacional ...<br />- UNAB\" + \\\n",
     "\"<br /><br /><br />\" + \\\n",
     "\"<span>[</span><a href='#example' title='Editar sección'>editar</a><span>]</span>Tiempos:\" + \\\n",
     "\"<br />\" + \\\n",
     "\"<table><tr><th>Ruta</th><th>Tiempo</th><th>Edad</th></tr><tr><td>Ruta 1</td><td>11 horas</td><td>12</td></tr><tr><td>Ruta 2</td><td>30 horas</td><td>18</td></tr></table>\" + \\\n",
-    "\"<img src='https://misiontic2022.mintic.gov.co/mtv2/assets/assets/images/logo-mision.png' alt='mintic 2022' width='500'>\"\n",
+    "\"<img src='https://blog-assets.lightspeedhq.com/img/2020/04/bbcdda07-xxxxxgoogle-shopping.jpg' alt='mintic 2022' width='500'>\"\n",
     "display_html(html)"
    ]
   },
@@ -708,7 +708,7 @@
    "source": [
     "# lectura de archivo con parrafos procesados\n",
     "import json\n",
-    "with open(\"dataset/processed/paragraphs.json\") as fp:\n",
+    "with open(\"dataset/processed/processed.json\") as fp:\n",
     "    paragraphs = json.load(fp)"
    ]
   },
@@ -1374,7 +1374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
